--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,10 @@
 plugins {
-	id 'fabric-loom' version '1.0-SNAPSHOT'
-	id 'maven-publish'
-	id 'org.jetbrains.kotlin.jvm' version '1.7.10'
+	id "fabric-loom" version "1.2-SNAPSHOT"
+	id "io.github.juuxel.loom-quiltflower" version "1.10.0"
+	id 'org.jetbrains.kotlin.jvm' version '1.8.22'
+	id "co.uzzu.dotenv.gradle" version "2.0.0"
+	id "maven-publish"
+
 }
 
 sourceCompatibility = JavaVersion.VERSION_17
@@ -18,11 +21,6 @@ repositories {
 	// See https://docs.gradle.org/current/userguide/declaring_repositories.html
 	// for more information about repositories.
 
-	// Mod Menu
-	maven {
-		url "https://maven.terraformersmc.com/releases"
-	}
-
 }
 
 dependencies {
@@ -31,15 +29,8 @@ dependencies {
 	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
 	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 
-	// Fabric API. This is technically optional, but you probably want it anyway.
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
-
-	// Uncomment the following line to enable the deprecated Fabric API modules. 
-	// These are included in the Fabric API production distribution and allow you to update your mod to the latest modules at a later more convenient time.
-
 	modImplementation "net.fabricmc:fabric-language-kotlin:${project.flk_version}"
-
-	modImplementation "com.terraformersmc:modmenu:${project.modmenu_version}"
 
 	// modImplementation "net.fabricmc.fabric-api:fabric-api-deprecated:${project.fabric_version}"
 }
@@ -53,7 +44,6 @@ processResources {
 }
 
 tasks.withType(JavaCompile).configureEach {
-	// Minecraft 1.18 (1.18-pre2) upwards uses Java 17.
 	it.options.release = 17
 }
 
@@ -80,9 +70,23 @@ publishing {
 
 	// See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
 	repositories {
-		// Add repositories to publish to here.
-		// Notice: This block does NOT have the same function as the block in the top level.
-		// The repositories here will be used for publishing your artifact, not for
-		// retrieving dependencies.
+		maven {
+			name "lilydevMaven"
+
+			if (
+				project.mod_version.contains("beta") ||
+				project.mod_version.contains("alpha") ||
+				project.mod_version.contains("snapshot")
+			) {
+				url "https://maven.lilydev.com/snapshots"
+			} else {
+				url "https://maven.lilydev.com/releases"
+			}
+
+			credentials {
+				username env.REPO_USER.value
+				password env.REPO_TOKEN.value
+			}
+		}
 	}
 }
