--- a/gradle.properties
+++ b/gradle.properties
@@ -3,16 +3,16 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/develop
-	minecraft_version=1.19.2
-	yarn_mappings=1.19.2+build.8
-	loader_version=0.14.9
+	minecraft_version=1.20.1
+	yarn_mappings=1.20.1+build.2
+	loader_version=0.14.21
 
 # Mod Properties
-	mod_version = 1.0.0
+	mod_version = 1.0.0+1.20
 	maven_group = com.lilydev
-	archives_base_name = example_mod
+	archives_base_name = template
 
 # Dependencies
-	fabric_version=0.60.0+1.19.2
-	flk_version=1.8.5+kotlin.1.7.20
+	fabric_version=0.83.1+1.20.1
+	flk_version=1.9.5+kotlin.1.8.22
 	modmenu_version=4.0.6
