--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
 	id "fabric-loom" version "1.2-SNAPSHOT"
 	id "io.github.juuxel.loom-quiltflower" version "1.10.0"
-	id 'org.jetbrains.kotlin.jvm' version '1.8.22'
+	id "org.jetbrains.kotlin.jvm" version "1.8.22"
 	id "co.uzzu.dotenv.gradle" version "2.0.0"
 	id "maven-publish"
 
@@ -11,7 +11,7 @@ sourceCompatibility = JavaVersion.VERSION_17
 targetCompatibility = JavaVersion.VERSION_17
 
 archivesBaseName = project.archives_base_name
-version = project.mod_version
+version = "${project.mod_version}+${project.minecraft_version}"
 group = project.maven_group
 
 repositories {
