--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,6 @@ plugins {
 	id "org.jetbrains.kotlin.jvm" version "1.8.22"
 	id "co.uzzu.dotenv.gradle" version "2.0.0"
 	id "maven-publish"
-
 }
 
 sourceCompatibility = JavaVersion.VERSION_17
@@ -45,6 +44,10 @@ processResources {
 
 tasks.withType(JavaCompile).configureEach {
 	it.options.release = 17
+}
+
+compileKotlin {
+	kotlinOptions.jvmTarget = "17"
 }
 
 java {
