specify publication variables

--- a/build.gradle
+++ b/build.gradle
@@ -67,6 +67,10 @@ jar {
 publishing {
 	publications {
 		mavenJava(MavenPublication) {
+			groupId = group
+			artifactId = archivesBaseName
+			version = version
+
 			from components.java
 		}
 	}
@@ -87,8 +91,8 @@ publishing {
 			}
 
 			credentials {
-				username env.REPO_USER.value
-				password env.REPO_TOKEN.value
+				username env.REPO_USER.orNull()
+				password env.REPO_TOKEN.orNull()
 			}
 		}
 	}
