--- a/build.gradle
+++ b/build.gradle
@@ -91,8 +91,10 @@ publishing {
 			}
 
 			credentials {
-				username env.REPO_USER.orNull()
-				password env.REPO_TOKEN.orNull()
+				if (env.REPO_USER.isPresent && env.REPO_TOKEN) {
+					username env.REPO_USER
+					password env.REPO_TOKEN
+				}
 			}
 		}
 	}
