--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,6 +17,9 @@ jobs:
         # and run on both Linux and Windows
         os: [ubuntu-20.04, windows-2022]
     runs-on: ${{ matrix.os }}
+    env:
+      REPO_USER: ${{ secrets.REPO_USER }}
+      REPO_TOKEN: ${{ secrets.REPO_TOKEN }}
     steps:
       - name: checkout repository
         uses: actions/checkout@v2
